# python-movingaverage

./: README  movingaverage.py  setup.cfg
scripts/: timeit
