[metadata]
name = python-movingaverage
version = 1.00
author = Sean Reifschneider
author_email = jafo@tummy.com
summary = Provides a moving average over a data set.
home_page = https://github.com/linsomniac/python-movingaverage

classifier = License :: Public Domain
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 2
    Intended Audience :: Developers

[files]
modules = movingaverage
extra_files = README

